@@ -5,6 +5,7 @@
 #include <X11/Xlib.h>
 
 #include "attribute_.h"
+#include "child.h"
 #include "object.h"
 #include "regexstr.h"
 #include "theme.h"
@@ -14,6 +15,7 @@
 class Decoration;
 class DecTriple;
 class Ewmh;
+class FrameLeaf;
 class Slice;
 class HSTag;
 class Monitor;
@@ -60,6 +62,7 @@ public:
     Attribute_<bool> minimized_;
     Attribute_<std::string> title_;  // or also called window title; this is never NULL
     DynAttribute_<std::string> tag_str_;
+    DynChild_<FrameLeaf> frame_;
     Attribute_<std::string> window_id_str;
     Attribute_<RegexStr> keyMask_; // regex for key bindings that are active on this window
     Attribute_<RegexStr> keysInactive_; // regex for key bindings that are inactive on this window
@@ -125,6 +128,7 @@ private:
     std::string getWindowClass();
     std::string getWindowInstance();
     std::string triggerRelayoutMonitor();
+    FrameLeaf* containingFrame();
     void requestRedraw();
     friend Decoration;
     ClientManager& manager;
